# 6502_emulator

./: .gitignore  Cargo.toml  LICENSE  README.md  a.out  build_asm.py  index.html  symbols.dbg
.github/workflows/: rust.yml  static.yml
examples/: ferris.asm  paint.asm  rgb.asm  sequential_random.asm  snake.asm  wallpaper.asm
src/: app.rs  cpu.rs  main.rs
