[package]
name = "nemu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.3", features = ["derive"] }
macroquad = { version = "0.3.25", default-features = false }

[features]
default = ["debug_logs"]
debug_logs = []
